[package]
name = "ctv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["base64", "rand", "serde"] }
hex = "0.4.3"
miniscript = { version = "10.0.0", features = ["base64", "compiler", "rand", "serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.7"
