[package]
name = "ctv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctvlib = { git = "https://github.com/ursuscamp/ctvlib" }
# ctvlib = { path = "../ctvlib" }
anyhow = "1.0.79"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["tracing"] }
axum-extra = { version = "0.9.2", features = ["form"] }
bitcoin = { version = "0.31.1", features = ["base64", "rand", "serde"] }
hex = "0.4.3"
miniscript = { version = "10.0.0", features = ["base64", "compiler", "rand", "serde"] }
regex = "1.10.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "3.6.0"
sha2 = "0.10.7"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
